1.92  2026-01-05

    - Promote release to version 1.92 capturing the split boolean handling
      improvements and accompanying test coverage.

1.91  2026-01-05

    - Promote release to version 1.91 covering string scalar flattening
      improvements and expanded test coverage.

1.90  2026-01-05

    - Promote release to version 1.90 including argument validation for
      drop(), tail(), and chunks() along with expanded slice tests.

1.89  2026-01-05

    - Release version 1.89 with stricter limit() validation and expanded
      tests covering invalid arguments.

1.88  2026-01-05

    - Promote release to version 1.88 including the invalid regex error
      handling improvements and additional test coverage.

1.87  2026-01-05

    - Clarified and enforced usage errors when --raw-input is used without
      a filter expression, including distinct diagnostics for standalone
      and --slurp modes.
    - Added CLI regression tests to lock in exit code 5 and the expected
      usage messages for missing-query scenarios.

1.86  2026-01-05

    - Refined the count filter to operate per input value, correctly handling
      streamed inputs and nested arrays without implicit aggregation.

    - Expanded count test coverage to validate stream semantics, including
      objects, scalars, null values, and composed pipelines.


1.85  2026-01-05

    - Hardened range() argument validation to reject booleans, references,
      and numeric-looking strings instead of silently coercing them.
    - Expanded range tests to cover invalid bounds and step values,
      ensuring runtime errors are raised consistently.

1.84  2026-01-05

    - Promote release to version 1.84 incorporating stricter path element
      validation and expanded coverage for setpath() and delpaths().

1.83  2026-01-05

    - Promote release to version 1.83 capturing the compile-time validation
      improvements for empty comma-separated filters and expanded CLI
      contract coverage.

1.82  2026-01-04
